--- a/pepeizqs deals web/Areas/Identity/Pages/Account/Manage/_PerfilLayout.cshtml
+++ b/pepeizqs deals web/Areas/Identity/Pages/Account/Manage/_PerfilLayout.cshtml
@@ -1,4 +1,8 @@
 ﻿@{
+    #nullable disable
+
+    string idioma = Context.Request.Headers["Accept-Language"].ToString().Split(";").FirstOrDefault()?.Split(",").FirstOrDefault();
+
     if (ViewData.TryGetValue("ParentLayout", out var parentLayout) && parentLayout != null)
     {
         Layout = parentLayout.ToString();
@@ -10,7 +14,7 @@
 }
 
 <div class="perfil">
-    <div class="texto-info">Change your account settings</div>
+    <div class="texto-info">@Herramientas.Idiomas.CogerCadena(idioma, "Settings.String1")</div>
 
     <hr/>
 
