--- a/pepeizqs deals web/Pages/Componentes/Secciones/Minimos.razor
+++ b/pepeizqs deals web/Pages/Componentes/Secciones/Minimos.razor
@@ -11,47 +11,76 @@
 
 @if (juegosMostrar.Count > 0)
 {
-	<div style="display: flex; align-items: center; width: 100%;">
-		<div style="width: 80%; font-size: 23px; text-align: left;">
-			@Herramientas.Idiomas.CogerCadena(idioma, "HistoricalLow.String1")
-		</div>
+	<div style="background-color: var(--fondoCuerpo); position: sticky; position: -webkit-sticky; top: 70px; z-index: 1; margin: -10px; padding: 10px;">
+		<div style="display: flex; align-items: center; width: 100%;">
+			<div style="width: 70%; font-size: 23px; text-align: left;">
+				@Herramientas.Idiomas.CogerCadena(idioma, "HistoricalLow.String1")
+			</div>
 
-		<div style="width: 20%; font-size: 16px; text-align: right;">
-			@minimo.ToString()/@juegosConMinimos.Count.ToString()
+			<div style="display: flex; align-items: center; width: 30%; justify-content: right;">
+				<div class="menu-dropdown" style="margin-right: 30px;">
+					<button class="boton-pequeño" style="padding: 9px 12px; margin: 0; border: 0px; color: var(--colorTextoVisitado);"><i class="fa-solid fa-sort" style="margin-right: 10px; font-size: 19px;"></i>@Herramientas.Idiomas.CogerCadena(idioma, "HistoricalLow.String2")</button>
+					<div class="menu-dropdown-contenido" style="right: 0;">
+						<button class="texto-cabecera menu-dropdown-item" style="text-align: right; width: 100%; border: 0px;" @onclick="OrdenarUltimosAñadidos">@Herramientas.Idiomas.CogerCadena(idioma, "HistoricalLow.String3")</button>
+						<button class="texto-cabecera menu-dropdown-item" style="text-align: right; width: 100%; border: 0px;" @onclick="OrdenarReseñas">@Herramientas.Idiomas.CogerCadena(idioma, "HistoricalLow.String4")</button>
+						<button class="texto-cabecera menu-dropdown-item" style="text-align: right; width: 100%; border: 0px;" @onclick="OrdenarPrecio">@Herramientas.Idiomas.CogerCadena(idioma, "HistoricalLow.String5")</button>
+						<button class="texto-cabecera menu-dropdown-item" style="text-align: right; width: 100%; border: 0px;" @onclick="OrdenarDescuento">@Herramientas.Idiomas.CogerCadena(idioma, "HistoricalLow.String6")</button>
+					</div>
+				</div>
+
+				<div style="font-size: 16px; text-align: right;">
+					@minimo.ToString()/@juegosConMinimos.Count.ToString()
+				</div>
+				
+				@if (minimo >= 50)
+				{
+					<a @onclick="ClickearAtras" class="boton-pequeño" href="/HistoricalLow#top" target="_top" style="width: 50px; font-size: 20px; text-align: center; margin-left: 20px;"><i class="fa-solid fa-chevron-left"></i></a>
+				}
+
+				<a @onclick="ClickearAdelante" class="boton-pequeño" href="/HistoricalLow#top" target="_top" style="width: 50px; font-size: 20px; text-align: center; margin-left: 20px;"><i class="fa-solid fa-chevron-right"></i></a>
+			</div>
 		</div>
 	</div>
 
-	<hr/>
+	<hr />
 
-	<div style="position: fixed; z-index: 1; margin-top: -40px; width: 100%; left: 0;">
-		@if (minimo >= 50)
-		{
-			<button @onclick="ClickearAtras" class="boton-pequeño" style="width: 50px; font-size: 22px; text-align: center; margin: 40px; left: 0; position: fixed;"><i class="fa-solid fa-chevron-left" /></button>
-		}
-
-		<button @onclick="ClickearAdelante" class="boton-pequeño" style="width: 50px; font-size: 22px; text-align: center; margin: 40px; right: 0; position: fixed;"><i class="fa-solid fa-chevron-right"></i></button>
-	</div>
-
-	<div class="perfil" id="caja" style="padding: 15px 20px;">
+	<div>
 		@foreach (var juego in juegosMostrar)
 		{
-			<div class="perfil-flexible-centrado" style="margin-top: 15px; margin-bottom: 15px;">
-				<a class="boton-pequeño" style="padding: 0px;" href="/game/@juego.Id">
+			<div class="perfil-flexible-centrado" style="margin-top: 25px; margin-bottom: 25px;">
+				<a class="boton-pequeño" style="padding: 0px;" href="@CargarEnlace(juego)" target="_blank">
 					<div class="perfil-flexible-centrado">
 						<div style="width: 18%;">
-							<img src="@juego.Imagenes.Capsule_231x87" style="max-height: 100%; max-width: 100%;" />
+							<img src="@juego.Imagenes.Capsule_231x87" style="min-height: 100%; min-width: 100%; margin: 3px;" />
 						</div>
 
-						<div style="width: 56%; padding: 4px 15px;">
+						<div style="width: 56%; padding: 5px 20px;">
 							<div>@juego.Nombre</div>
 
-							<div class="perfil-flexible-centrado" style="justify-content: left;">
-								<div style="width: 20px; height: 20px;"><img src="@CargarImagenDRM(juego)" style="max-width: 100%; max-height: 100%;" /></div>
+							<div class="perfil-flexible-centrado" style="justify-content: left; margin-top: 10px;">
+								<img src="@CargarImagenDRM(juego)" style="width: 20px; height: 20px;" />
+
+								@if (int.Parse(@juego.Analisis.Porcentaje) > 74)
+								{
+									<img src="/imagenes/analisis/positive.webp" style="width: 20px; height: 20px; margin-left: 10px;" />
+								}
+
+								@if (int.Parse(@juego.Analisis.Porcentaje) > 49 && int.Parse(@juego.Analisis.Porcentaje) < 75)
+								{
+									<img src="/imagenes/analisis/mixed.webp" style="width: 20px; height: 20px; margin-left: 10px;" />
+								}
+
+								@if (int.Parse(@juego.Analisis.Porcentaje) < 50)
+								{
+									<img src="/imagenes/analisis/negative.webp" style="width: 20px; height: 20px; margin-left: 10px;" />
+								}
+
+								<div style="margin-left: 20px; font-size: 13px;">@CargarDetectado(juego)</div>
 
 								@if (BaseDatos.Usuarios.Buscar.RolDios(UserManager.GetUserName(HttpContextAccessor.HttpContext!.User)) == true)
 								{
-									<div style="margin-left: 10px; margin-right: 10px;">@juego.Id</div>
-									<div style="margin-left: 10px; margin-right: 10px;">@int.Parse(juego.Analisis.Cantidad.Replace(",", null))</div>
+									<div style="margin-left: 20px; font-size: 13px;">@juego.Id</div>
+									<div style="margin-left: 20px; font-size: 13px;">@int.Parse(juego.Analisis.Cantidad.Replace(",", null))</div>
 								}
 							</div>						
 						</div>
@@ -81,9 +110,6 @@
 	[Parameter]
 	public string idioma { get; set; }
 
-	[Inject] 
-	IJSRuntime javascript { get; set; }
-
 	private List<Juego> juegosConMinimos = new List<Juego>();
 	private List<Juego> juegosMostrar = new List<Juego>();
 
@@ -111,10 +137,10 @@
 			}
 		}
 
-		CargarJuegos(minimo, maximo, false);
+		CargarJuegos(minimo, maximo);
 	}
 
-	private void CargarJuegos(int minimo2, int maximo2, bool volverArriba)
+	private void CargarJuegos(int minimo2, int maximo2)
 	{
 		if (juegosConMinimos != null)
 		{
@@ -138,7 +164,7 @@
 			maximo = maximo + 50;
 		}
 
-		CargarJuegos(minimo, maximo, true);
+		CargarJuegos(minimo, maximo);
 	}
 
 	private void ClickearAtras()
@@ -149,7 +175,7 @@
 			maximo = maximo - 50;
 		}
 
-		CargarJuegos(minimo, maximo, true);
+		CargarJuegos(minimo, maximo);
 	}
 
 	private string CargarImagenDRM(Juego juego)
@@ -159,13 +185,16 @@
 
 		foreach (var minimo in juego.PrecioMinimosHistoricos)
 		{
-			if (minimo.Precio < precio)
+			if (minimo.DRM != JuegoDRM.NoEspecificado)
 			{
-				precio = minimo.Precio;
+				if (minimo.Precio < precio)
+				{
+					precio = minimo.Precio;
 
-				JuegoPrecio oferta = minimo;
-				imagen = oferta.DRM.ToString();
-			}
+					JuegoPrecio oferta = minimo;
+					imagen = oferta.DRM.ToString();
+				}
+			}			
 		}
 
 		if (imagen != null)
@@ -185,21 +214,24 @@
 
 		foreach (var minimo in juego.PrecioMinimosHistoricos)
 		{
-			if (minimo.Precio < precio)
+			if (minimo.DRM != JuegoDRM.NoEspecificado)
 			{
-				precio = minimo.Precio;
-
-				JuegoPrecio oferta = minimo;
-				List<Tiendas2.Tienda> tiendas = Tiendas2.TiendasCargar.GenerarListado();
-
-				foreach (var tienda in tiendas)
+				if (minimo.Precio < precio)
 				{
-					if (tienda.Id == oferta.Tienda)
+					precio = minimo.Precio;
+
+					JuegoPrecio oferta = minimo;
+					List<Tiendas2.Tienda> tiendas = Tiendas2.TiendasCargar.GenerarListado();
+
+					foreach (var tienda in tiendas)
 					{
-						imagen = tienda.Imagen300x80;
+						if (tienda.Id == oferta.Tienda)
+						{
+							imagen = tienda.Imagen300x80;
+						}
 					}
 				}
-			}
+			}			
 		}
 
 		if (imagen != null)
@@ -219,13 +251,16 @@
 
 		foreach (var minimo in juego.PrecioMinimosHistoricos)
 		{
-			if (minimo.Precio < precio)
+			if (minimo.DRM != JuegoDRM.NoEspecificado)
 			{
-				precio = minimo.Precio;
+				if (minimo.Precio < precio)
+				{
+					precio = minimo.Precio;
 
-				JuegoPrecio oferta = minimo;
-				descuento = oferta.Descuento.ToString() + "%";
-			}
+					JuegoPrecio oferta = minimo;
+					descuento = oferta.Descuento.ToString() + "%";
+				}
+			}			
 		}
 
 		if (descuento != null)
@@ -245,15 +280,18 @@
 
 		foreach (var minimo in juego.PrecioMinimosHistoricos)
 		{
-			if (minimo.Precio < precio)
+			if (minimo.DRM != JuegoDRM.NoEspecificado)
 			{
-				precio = minimo.Precio;
+				if (minimo.Precio < precio)
+				{
+					precio = minimo.Precio;
 
-				JuegoPrecio oferta = minimo;
-				precioMensaje = oferta.Precio.ToString();
-				precioMensaje = precioMensaje.Replace(".", ",");
-				precioMensaje = precioMensaje + "€";
-			}
+					JuegoPrecio oferta = minimo;
+					precioMensaje = oferta.Precio.ToString();
+					precioMensaje = precioMensaje.Replace(".", ",");
+					precioMensaje = precioMensaje + "€";
+				}
+			}			
 		}
 
 		if (precioMensaje != null)
@@ -265,4 +303,349 @@
 			return null;
 		}
 	}
+
+	private string CargarDetectado(Juego juego)
+	{
+		string detectado = null;
+		decimal precio = 10000000;
+
+		foreach (var minimo in juego.PrecioMinimosHistoricos)
+		{
+			if (minimo.DRM != JuegoDRM.NoEspecificado)
+			{
+				if (minimo.Precio < precio)
+				{
+					precio = minimo.Precio;
+
+					JuegoPrecio oferta = minimo;
+					detectado = Herramientas.Calculadora.HaceTiempo(oferta.FechaDetectado, idioma);
+				}
+			}
+		}
+
+		if (detectado != null)
+		{
+			return detectado;
+		}
+		else
+		{
+			return null;
+		}
+	}
+
+	private string CargarEnlace(Juego juego)
+	{
+		string enlace = null;
+		decimal precio = 10000000;
+
+		foreach (var minimo in juego.PrecioMinimosHistoricos)
+		{
+			if (minimo.DRM != JuegoDRM.NoEspecificado)
+			{
+				if (minimo.Precio < precio)
+				{
+					precio = minimo.Precio;
+
+					JuegoPrecio oferta = minimo;
+					enlace = Herramientas.EnlaceAcortador.Generar(oferta.Enlace, oferta.Tienda);
+				}
+			}
+		}
+
+		if (enlace != null)
+		{
+			return enlace;
+		}
+		else
+		{
+			return null;
+		}
+	}
+
+	#region Ordenar
+
+	private void OrdenarUltimosAñadidos()
+	{
+		minimo = 0;
+		maximo = 50;
+
+		if (juegosConMinimos != null)
+		{
+			if (juegosConMinimos.Count > 0)
+			{
+				juegosConMinimos.Sort(delegate (Juego j1, Juego j2)
+				{
+					List<JuegoPrecio> j1Ofertas = new List<JuegoPrecio>();
+
+					if (j1.PrecioMinimosHistoricos.Count > 0)
+					{
+						decimal precio = 10000000;
+						JuegoPrecio minimo = null;
+
+						foreach (var minimo2 in j1.PrecioMinimosHistoricos)
+						{
+							if (minimo2.Precio < precio)
+							{
+								if (minimo2.DRM != JuegoDRM.NoEspecificado)
+								{
+									precio = minimo2.Precio;
+
+									minimo = minimo2;
+								}
+							}
+						}
+
+						if (minimo != null)
+						{
+							j1Ofertas.Add(minimo);
+						}
+					}
+
+					List<JuegoPrecio> j2Ofertas = new List<JuegoPrecio>();
+
+					if (j2.PrecioMinimosHistoricos.Count > 0)
+					{
+						decimal precio = 10000000;
+						JuegoPrecio minimo = null;
+
+						foreach (var minimo2 in j2.PrecioMinimosHistoricos)
+						{
+							if (minimo2.Precio < precio)
+							{
+								if (minimo2.DRM != JuegoDRM.NoEspecificado)
+								{
+									precio = minimo2.Precio;
+
+									minimo = minimo2;
+								}
+							}
+						}
+
+						if (minimo != null)
+						{
+							j2Ofertas.Add(minimo);
+						}
+					}
+
+					if (j1Ofertas.Count > 0 && j2Ofertas.Count > 0)
+					{
+						return j2Ofertas[0].FechaDetectado.CompareTo(j1Ofertas[0].FechaDetectado);
+					}
+					else
+					{
+						if (j1Ofertas.Count == 0 && j2Ofertas.Count > 0)
+						{
+							return 1;
+						}
+						else if (j1Ofertas.Count > 0 && j2Ofertas.Count == 0)
+						{
+							return -1;
+						}
+					}
+
+					return 0;
+				});
+			}
+		}
+
+		CargarJuegos(minimo, maximo);
+	}
+
+	private void OrdenarReseñas()
+	{
+		minimo = 0;
+		maximo = 50;
+
+		if (juegosConMinimos != null)
+		{
+			if (juegosConMinimos.Count > 0)
+			{
+				juegosConMinimos.Sort(delegate (Juego j1, Juego j2)
+				{
+					int j1Analisis = int.Parse(j1.Analisis.Cantidad.Replace(",", null));
+					int j2Analisis = int.Parse(j2.Analisis.Cantidad.Replace(",", null));
+
+					return j2Analisis.CompareTo(j1Analisis);
+				});
+			}
+		}
+
+		CargarJuegos(minimo, maximo);
+	}
+
+	private void OrdenarPrecio()
+	{
+		minimo = 0;
+		maximo = 50;
+
+		if (juegosConMinimos != null)
+		{
+			if (juegosConMinimos.Count > 0)
+			{
+				juegosConMinimos.Sort(delegate (Juego j1, Juego j2)
+				{
+					List<JuegoPrecio> j1Ofertas = new List<JuegoPrecio>();
+
+					if (j1.PrecioMinimosHistoricos.Count > 0)
+					{
+						decimal precio = 10000000;
+						JuegoPrecio minimo = null;
+
+						foreach (var minimo2 in j1.PrecioMinimosHistoricos)
+						{
+							if (minimo2.Precio < precio)
+							{
+								if (minimo2.DRM != JuegoDRM.NoEspecificado)
+								{
+									precio = minimo2.Precio;
+
+									minimo = minimo2;
+								}
+							}
+						}
+
+						if (minimo != null)
+						{
+							j1Ofertas.Add(minimo);
+						}
+					}
+
+					List<JuegoPrecio> j2Ofertas = new List<JuegoPrecio>();
+
+					if (j2.PrecioMinimosHistoricos.Count > 0)
+					{
+						decimal precio = 10000000;
+						JuegoPrecio minimo = null;
+
+						foreach (var minimo2 in j2.PrecioMinimosHistoricos)
+						{
+							if (minimo2.Precio < precio)
+							{
+								if (minimo2.DRM != JuegoDRM.NoEspecificado)
+								{
+									precio = minimo2.Precio;
+
+									minimo = minimo2;
+								}
+							}
+						}
+
+						if (minimo != null)
+						{
+							j2Ofertas.Add(minimo);
+						}
+					}
+
+					if (j1Ofertas.Count > 0 && j2Ofertas.Count > 0)
+					{
+						return j1Ofertas[0].Precio.CompareTo(j2Ofertas[0].Precio);
+					}
+					else
+					{
+						if (j1Ofertas.Count == 0 && j2Ofertas.Count > 0)
+						{
+							return 1;
+						}
+						else if (j1Ofertas.Count > 0 && j2Ofertas.Count == 0)
+						{
+							return -1;
+						}
+					}
+
+					return 0;
+				});
+			}
+		}
+
+		CargarJuegos(minimo, maximo);
+	}
+
+	private void OrdenarDescuento()
+	{
+		minimo = 0;
+		maximo = 50;
+
+		if (juegosConMinimos != null)
+		{
+			if (juegosConMinimos.Count > 0)
+			{
+				juegosConMinimos.Sort(delegate (Juego j1, Juego j2)
+				{
+					List<JuegoPrecio> j1Ofertas = new List<JuegoPrecio>();
+
+					if (j1.PrecioMinimosHistoricos.Count > 0)
+					{
+						decimal precio = 10000000;
+						JuegoPrecio minimo = null;
+
+						foreach (var minimo2 in j1.PrecioMinimosHistoricos)
+						{
+							if (minimo2.Precio < precio)
+							{
+								if (minimo2.DRM != JuegoDRM.NoEspecificado)
+								{
+									precio = minimo2.Precio;
+
+									minimo = minimo2;
+								}
+							}
+						}
+
+						if (minimo != null)
+						{
+							j1Ofertas.Add(minimo);
+						}
+					}
+
+					List<JuegoPrecio> j2Ofertas = new List<JuegoPrecio>();
+
+					if (j2.PrecioMinimosHistoricos.Count > 0)
+					{
+						decimal precio = 10000000;
+						JuegoPrecio minimo = null;
+
+						foreach (var minimo2 in j2.PrecioMinimosHistoricos)
+						{
+							if (minimo2.Precio < precio)
+							{
+								if (minimo2.DRM != JuegoDRM.NoEspecificado)
+								{
+									precio = minimo2.Precio;
+
+									minimo = minimo2;
+								}
+							}
+						}
+
+						if (minimo != null)
+						{
+							j2Ofertas.Add(minimo);
+						}
+					}
+
+					if (j1Ofertas.Count > 0 && j2Ofertas.Count > 0)
+					{
+						return j2Ofertas[0].Descuento.CompareTo(j1Ofertas[0].Descuento);
+					}
+					else
+					{
+						if (j1Ofertas.Count == 0 && j2Ofertas.Count > 0)
+						{
+							return 1;
+						}
+						else if (j1Ofertas.Count > 0 && j2Ofertas.Count == 0)
+						{
+							return -1;
+						}
+					}
+
+					return 0;
+				});
+			}
+		}
+
+		CargarJuegos(minimo, maximo);
+	}
+
+	#endregion
 }
