--- a/pepeizqs deals web/Pages/Componentes/Admin/Tiendas.razor
+++ b/pepeizqs deals web/Pages/Componentes/Admin/Tiendas.razor
@@ -98,16 +98,14 @@
 				Herramientas.Divisas.CogerDatos();
 			}
 
-			///Admin/Tiendas?id=limpiar&tienda=
-
 			if (id == "limpiar")
 			{
 				//BaseDatos.Juegos.Precios.Limpiar(tienda);
 			}
 
-			if (id == "codigo")
+			if (id == "codigos")
 			{
-				BaseDatos.Juegos.Precios.Codigos();
+				// Herramientas.Buscador.ActualizarCodigos();
 			}
 		}
 	}
