--- a/pepeizqs deals web/Pages/Game.cshtml
+++ b/pepeizqs deals web/Pages/Game.cshtml
@@ -169,7 +169,7 @@
 													</div>
 
 													<div class="juego-precio">
-														@Herramientas.JuegoFicha.PrepararPrecio(precio.Precio, precio.Moneda)
+														@Herramientas.JuegoFicha.PrepararPrecio(precio.Precio, false, precio.Moneda)
 													</div>
 												</div>
 											</div>
