--- a/pepeizqs deals web/Pages/Componentes/Secciones/Buscador.razor
+++ b/pepeizqs deals web/Pages/Componentes/Secciones/Buscador.razor
@@ -61,7 +61,7 @@
     {
         if (texto.Value.ToString().Trim().Length > 1)
         {
-            juegos = BaseDatos.Juegos.Buscar.Nombre(texto.Value.ToString().Trim(), true);
+            juegos = BaseDatos.Juegos.Buscar.Nombre(texto.Value.ToString().Trim());
         } 
         else
         {
