--- a/pepeizqs deals web/Pages/HistoricalLow.cshtml
+++ b/pepeizqs deals web/Pages/HistoricalLow.cshtml
@@ -1,9 +1,14 @@
 ﻿@page
 @model pepeizqs_deals_web.Pages.HistoricalLowModel
 
+@using Microsoft.Extensions.Caching.Memory;
+
 @{
 	ViewData["Title"] = Herramientas.Idiomas.CogerCadena(Model.idioma, "HistoricalLow.Title");
 	Layout = "/Pages/Shared/_Layout.cshtml";
 }
 
-@(await Html.RenderComponentAsync<Componentes.Secciones.Minimos>(RenderMode.ServerPrerendered, new { idioma = @Model.idioma }))
+@* vary-by-user="true" *@
+<cache priority="CacheItemPriority.Normal" expires-sliding="@TimeSpan.FromSeconds(180)" vary-by="@Model.idioma">
+	@(await Html.RenderComponentAsync<Componentes.Secciones.Minimos>(RenderMode.ServerPrerendered, new { idioma = @Model.idioma }))
+</cache>
