--- a/pepeizqs deals web/Pages/Index.cshtml
+++ b/pepeizqs deals web/Pages/Index.cshtml
@@ -1,11 +1,13 @@
 ﻿@page
 @model IndexModel
 
-@using Microsoft.AspNetCore.Builder;
+@using Microsoft.Extensions.Caching.Memory;
 
 @{
 	ViewData["Title"] = Herramientas.Idiomas.CogerCadena(Model.idioma, "Index.Title");
 	Layout = "/Pages/Shared/_Layout.cshtml";
 }
 
-@(await Html.RenderComponentAsync<Componentes.Secciones.Portada>(RenderMode.ServerPrerendered, new { idioma = @Model.idioma }))
+<cache priority="CacheItemPriority.NeverRemove" expires-sliding="@TimeSpan.FromSeconds(30)" vary-by="@Model.idioma">
+	@(await Html.RenderComponentAsync<Componentes.Secciones.Portada>(RenderMode.ServerPrerendered, new { idioma = @Model.idioma }))
+</cache>
